--- a/index.html
+++ b/index.html
@@ -9,16 +9,36 @@
 </head>
 <body>
     <div class='parent'>
-        <div class="child"><p class='child__p'>1</p></div>
-        <div class="child"><p class='child__p'>2</p></div>
-        <div class="child"><p class='child__p'>3</p></div>
-        <div class="child"><p class='child__p'>4</p></div>
-        <div class="child"><p class='child__p'>5</p></div>
-        <div class="child"><p class='child__p'>6</p></div>
-        <div class="child"><p class='child__p'>7</p></div>
-        <div class="child"><p class='child__p'>8</p></div>
-        <div class="child"><p class='child__p'>9</p></div>
-        <div class="child"><p class='child__p'>10</p></div>
+        <div class="child"><div class="throb">
+            <p class='child__p'>1</p>
+        </div></div>
+        <div class="child"><div class="throb">
+            <p class='child__p'>2</p>
+        </div></div>
+        <div class="child"><div class="throb">
+            <p class='child__p'>3</p>
+        </div></div>
+        <div class="child"><div class="throb">
+            <p class='child__p'>4</p>
+        </div></div>
+        <div class="child"><div class="throb">
+            <p class='child__p'>5</p>
+        </div></div>
+        <div class="child"><div class="throb">
+            <p class='child__p'>6</p>
+        </div></div>
+        <div class="child"><div class="throb">
+            <p class='child__p'>7</p>
+        </div></div>
+        <div class="child"><div class="throb">
+            <p class='child__p'>8</p>
+        </div></div>
+        <div class="child"><div class="throb">
+            <p class='child__p'>9</p>
+        </div></div>
+        <div class="child"><div class="throb">
+            <p class='child__p'>10</p>
+        </div></div>
     </div>
 </body>
 </html>
